# rag_assignment

./: readme.md
backend/: .dockerignore  .env.example  .gitignore  .http  Dockerfile  LICENSE.md  Makefile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/v1/: __init__.py
backend/app/v1/auth/: auth_controller.py  auth_service.py
backend/app/v1/bra-fitting/: brafitting_controller.py  brafitting_service.py
backend/app/v1/bra_fitting/: __init__.py  brafitting_controller.py  brafitting_service.py
backend/app/v1/monitoring/: __init__.py  monitoring_controller.py
backend/app/v1/recommendation/: __init__.py  recommendation_controller.py  recommendation_service.py
backend/common/constants/: __init__.py
backend/common/mongodb/: exception.py  index.py  search.py
backend/common/openai/: chat.py  embedding.py
backend/core/: config.py  server.py
backend/core/cache/: cache_manager.py  cache_tag.py
backend/core/controller/: base.py
backend/core/decorators/: __init__.py  auth.py  controller.py  service.py
backend/core/exceptions/: __init__.py  base.py
backend/core/factory/: __init__.py
backend/core/fastapi/: exception_handlers.py
backend/core/fastapi/dependencies/: request.py
backend/core/fastapi/middlewares/: __init__.py  authentication.py  logging.py  response.py
backend/core/security/: jwt.py
backend/core/utils/: __init__.py  clean_str.py  create_json_response.py  get_allowed_origins.py  make_optional.py  setup_logs.py
backend/prisma/: schema.prisma
backend/prisma/seed/: seed_data.py
(+27 files in other folders)
